Fix README.md and Makefile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,5 @@ services:
             - elasticsearch
     elasticsearch:
         image: elasticsearch
-
+        ports:
+            - "59200:9200"
