--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     - 8888:8888
     environment:
     - PORT=8888
+    command: ["/wait-for-it.sh", "-t", "60", "elasticsearch:9200", "--", "env", "PORT=8888", "python", "/server.py"]
     links:
     - elasticsearch
   elasticsearch:
